--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>The Home page</h1>
+    <h1>The Home page <%='hello'.toUpperCase()%></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium reprehenderit amet nobis hic
         molestiae voluptates temporibus soluta cumque expedita? Ab harum voluptatibus sapiente molestiae hic fuga fugiat
         deserunt veniam?</p>
