EJS and Partial aka includes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<%- include('partials/head') %>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-</head>
+    <body>
+        <%- include('partials/navbar') %>
+            <h1>The Home page <%='hello'.toUpperCase()%>
+            </h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium reprehenderit amet nobis
+                hic
+                molestiae voluptates temporibus soluta cumque expedita? Ab harum voluptatibus sapiente molestiae hic
+                fuga fugiat
+                deserunt veniam?</p>
 
-<body>
-    <h1>The Home page <%='hello'.toUpperCase()%></h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident laudantium reprehenderit amet nobis hic
-        molestiae voluptates temporibus soluta cumque expedita? Ab harum voluptatibus sapiente molestiae hic fuga fugiat
-        deserunt veniam?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus in soluta maxime. Amet vel
+                excepturi
+                esse, unde facere assumenda reiciendis repudiandae molestiae! Vitae quo inventore explicabo ipsam
+                eveniet
+                voluptate?</p>
+            <%- include('partials/footer') %>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem repellendus in soluta maxime. Amet vel excepturi
-        esse, unde facere assumenda reiciendis repudiandae molestiae! Vitae quo inventore explicabo ipsam eveniet
-        voluptate?</p>
-
-</body>
+    </body>
 
 </html>
