--- a/views/cats.ejs
+++ b/views/cats.ejs
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Cats!</title>
-</head>
+<%- include('partials/head') %>
 
 <body>
+    <%- include('partials/navbar') %>
     <h1>All The Cats Are Closer</h1>
     <ul>
         <% for(let cat of cats) { %>
@@ -16,6 +12,7 @@
             </li>
             <% } %>
     </ul>
+    <%- include('partials/footer') %>
 </body>
 
 </html>
