--- a/views/random.ejs
+++ b/views/random.ejs
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random</title>
-</head>
+<%- include('partials/head') %>
 
 <body>
+    <%- include('partials/navbar') %>
     <h1>Your random number is: <%= num %></h1>
     <% if(num % 2 === 0) {%>
         <h2>That is an even number!</h2>
@@ -15,6 +11,7 @@
         <h2>That is an odd number!</h2>
     <% } %> 
     <h3>That number is: <%= num%2===0 ? 'EVEN' : 'ODD'%></h3>
+    <%- include('partials/footer') %>
 
 </body>
 
